Fix image height on small screens in the Archive layout - Fixes #40

--- a/src/files/css/main.css
+++ b/src/files/css/main.css
@@ -548,10 +548,6 @@ header, section {
     text-transform: none;
 }
 
-.layout-archive .story-image {
-    height: 210px;
-}
-
 .card-story .post-info {
     margin-bottom: 10px;
 }
